kubernetes/karakeep/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: karakeep
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/part-of: karakeep
  ingress:
  - fromEndpoints:
    - {}
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: envoy
        app.kubernetes.io/component: proxy
        io.kubernetes.pod.namespace: envoy-gateway-system
  egress:
  - toEndpoints:
    - {}
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
        - port: "53"
          protocol: UDP
      rules:
        dns:
          - matchPattern: "*"
  - toCIDRSet:
    - cidr: 169.254.25.10/32
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      rules:
        dns:
        - matchPattern: "*"
  - toCIDRSet:
    - cidr: 0.0.0.0/0
      except:
      - 10.0.0.0/8
    toPorts:
    - ports:
      - port: "80"
      - port: "443"
